Update java-opt env for development